--- a/.github/workflows/publish-wordpress.yml
+++ b/.github/workflows/publish-wordpress.yml
@@ -12,5 +12,5 @@ jobs:
         host: ${{ secrets.FTP_SERVER }}
         user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        localDir: "learn-git"
-        remoteDir: "/home/nhlamojd/ngoainguthantoc.com"  
+        localDir: "./"
+        remoteDir: "/home/nhlamojd/ngoainguthantoc.com/"  
